// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<OAuth2Session /> > renders a finished session 1`] = `
<div
  className="_block_17898c"
>
  <h6
    className="_font-body-md-semibold_1jx6b_64 _sessionName_634806"
    title="session-id"
  >
    <a
      className=""
      href="/session/abcd1234"
      onClick={[Function]}
    >
      abcd1234
    </a>
  </h6>
  <p
    className="_font-body-sm-semibold_1jx6b_45 _sessionMetadata_634806"
  >
    Signed in 
    <code>
      2023-06-29T03:35:17.451292+00:00
    </code>
  </p>
  <p
    className="_font-body-sm-semibold_1jx6b_45 _sessionMetadata_634806"
    data-finished={true}
  >
    Finished 
    <code>
      2023-06-29T03:35:19.451292+00:00
    </code>
  </p>
  <p
    className="_font-body-sm-regular_1jx6b_40 _sessionMetadata_634806"
  >
    Client:
     
    <span
      className="_font-body-sm-semibold_1jx6b_45 _sessionMetadata_634806"
    >
      Element
    </span>
  </p>
</div>
`;

exports[`<OAuth2Session /> > renders an active session 1`] = `
<div
  className="_block_17898c"
>
  <h6
    className="_font-body-md-semibold_1jx6b_64 _sessionName_634806"
    title="session-id"
  >
    <a
      className=""
      href="/session/abcd1234"
      onClick={[Function]}
    >
      abcd1234
    </a>
  </h6>
  <p
    className="_font-body-sm-semibold_1jx6b_45 _sessionMetadata_634806"
  >
    Signed in 
    <code>
      2023-06-29T03:35:17.451292+00:00
    </code>
  </p>
  <p
    className="_font-body-sm-regular_1jx6b_40 _sessionMetadata_634806"
  >
    Client:
     
    <span
      className="_font-body-sm-semibold_1jx6b_45 _sessionMetadata_634806"
    >
      Element
    </span>
  </p>
  <div
    className="_sessionActions_634806"
  >
    <button
      className="_button_1raud_17"
      data-kind="destructive"
      data-size="sm"
      disabled={false}
      onClick={[Function]}
      role="button"
      tabIndex={0}
    >
      End session
    </button>
  </div>
</div>
`;
